<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/back"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/imageView"
        android:padding="20dp"
        android:layout_width="157dp"
        android:layout_height="128dp"
        android:background="@drawable/iconback"
        app:layout_constraintBottom_toTopOf="@+id/edit_Name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/edit_Name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:textColorHint="@color/white"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="15dp"
        android:hint="@string/name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_Email"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="LabelFor,RtlSymmetry,TextFields,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="15dp" />

    <EditText
        android:id="@+id/edit_Email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:textColorHint="@color/white"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="15dp"
        android:hint="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/edit_pass"
        app:layout_constraintTop_toBottomOf="@+id/edit_Name"
        tools:ignore="LabelFor,RtlSymmetry,TextFields,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="29dp" />

    <EditText
        android:id="@+id/edit_pass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="15dp"
        android:textColorHint="@color/white"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="15dp"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Signup"
        app:layout_constraintTop_toBottomOf="@+id/edit_Email"
        tools:ignore="LabelFor,RtlSymmetry,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/btn_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/btn_background"
        android:text="@string/sign_up"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_Login"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_pass" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:text="@string/log_in"
        android:textColor="@color/white"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_Signup" />
</androidx.constraintlayout.widget.ConstraintLayout>
