<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/back"
    android:layout_height="match_parent"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="168dp"
        android:padding="20dp"
        android:background="@drawable/iconback"
        android:layout_height="148dp"
        android:layout_marginTop="70dp"
        app:layout_constraintBottom_toTopOf="@+id/login_Email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/icon"
        tools:ignore="ContentDescription" />

    <EditText
        android:id="@+id/login_Email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="text"
        android:paddingStart="15dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/email"
        android:textColor="#FAF6F6"
        android:textColorHint="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/login_pass"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="LabelFor,RtlSymmetry,TextFields,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="15dp" />

    <EditText
        android:id="@+id/login_pass"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColorHint="#ffffff"
        android:autofillHints=""
        android:background="@drawable/edit_background"
        android:ems="10"
        android:inputType="textPassword"
        android:paddingStart="15dp"
        android:layout_marginHorizontal="15dp"
        android:hint="@string/password"
        android:textColor="#ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_Signup"
        app:layout_constraintTop_toBottomOf="@+id/login_Email"
        tools:ignore="LabelFor,RtlSymmetry,VisualLintTextFieldSize"
        tools:layout_editor_absoluteX="15dp" />

    <Button
        android:id="@+id/btn_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_background"
        android:text="@string/log_in"
        android:textColor="#ffffff"
        app:layout_constraintBaseline_toBaselineOf="@+id/btn_Signup"
        app:layout_constraintEnd_toStartOf="@+id/btn_Signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_Signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:background="@drawable/btn_background"
        android:text="@string/sign_up"
        android:textColor="#ffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_Login"
        app:layout_constraintTop_toBottomOf="@+id/login_pass" />


</androidx.constraintlayout.widget.ConstraintLayout>